Arreglamos problema con el eliminado

--- a/src/index.html
+++ b/src/index.html
@@ -49,19 +49,19 @@
 						<a class="filtro" href="#/active">Pendientes</a>
 					</li>
 					<li>
-						<a class="filtro" href="#/completed">Completados</a>
+						<a class="filtro" href="#/completed">Realizados</a>
 					</li>
 				</ul>
 				<!-- Hidden if no completed items are left ↓ -->
-				<button class="clear-completed">Borrar completados</button>
+				<button class="clear-completed">Borrar realizados</button>
 			</footer>
 		</section>
 		<footer class="info">
 
-			<p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+			<!-- <p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p> -->
 			<!-- Change this out with your name and url ↓ -->
-			<p>Creado por <a href="http://todomvc.com">ti</a></p>
-			<p>Parte de <a href="http://todomvc.com">TodoMVC</a></p>
+			<p>Creado por <a href="#">Javier Avalos</a></p>
+			<!-- <p>Parte de <a href="http://todomvc.com">TodoMVC</a></p> -->
 		</footer>
         
         
