Creamos la funcionalidad de local storage

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<section class="todoapp">
 			<header class="header">
 				<h1>Tareas</h1>
-				<input class="new-todo" placeholder="¿Qué necesita ser hecho?" autofocus>
+				<input class="new-todo" placeholder="¿Qué necesitas hacer?" autofocus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
 			<section class="main">
